force-app/main/default/objects/Tab_User_Type__c/Tab_User_Type__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - It will give info on tab will be visible to which user type.</description>
    <label>Tab User Type</label>
    <nameField>
        <displayFormat>UT-{00000}</displayFormat>
        <label>Tab User Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tab User Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>