force-app/main/default/objects/Tab_User_Type__c/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Announcement</label>
    <referenceTo>Announcement__c</referenceTo>
    <relationshipLabel>Tab User Types</relationshipLabel>
    <relationshipName>Tab_User_Types</relationshipName>
    <type>Lookup</type>
</CustomField>