force-app/main/default/objects/Tab_User_Type__c/fields/Edition_Popup__c.field-meta.xml
<CustomField>
    <fullName>Edition_Popup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Edition Popup objects stores the data of the popup to be shown in Community Portal based on User Type.</description>
    <label>Edition Popup</label>
    <referenceTo>Edition_Popup__c</referenceTo>
    <relationshipLabel>Tab User Types</relationshipLabel>
    <relationshipName>Tab_User_Types</relationshipName>
    <type>Lookup</type>
</CustomField>