force-app/main/default/objects/Tab_User_Type__c/fields/Event_Tab__c.field-meta.xml
<CustomField>
    <fullName>Event_Tab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Event Tab</description>
    <label>Event Tab</label>
    <referenceTo>Event_Tabs__c</referenceTo>
    <relationshipLabel>Tab User Types</relationshipLabel>
    <relationshipName>Tab_User_Types</relationshipName>
    <type>Lookup</type>
</CustomField>