force-app/main/default/objects/Tab_User_Type__c/fields/Form_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Form_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up field to form allocation object. One form allocation can have many tab user types.</description>
    <label>Form Allocation</label>
    <referenceTo>Form_Allocation__c</referenceTo>
    <relationshipLabel>Tab User Types</relationshipLabel>
    <relationshipName>Tab_User_Types</relationshipName>
    <type>Lookup</type>
</CustomField>