force-app/main/default/objects/Tab_User_Type__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <description>Defines user type like Exhibitor, Agent, Co-Exhibitor, Contractor, Online</description>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Type</valueSetName>
    </valueSet>
</CustomField>