force-app/main/default/objects/Tab_User_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User_Type__c</columns>
    <columns>Form_Allocation__c</columns>
    <columns>Event_Tab__c</columns>
    <columns>Edition_Popup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>